--- a/AzureLab_GirlsandBoys/Areas/Boys/Views/Home/index.cshtml
+++ b/AzureLab_GirlsandBoys/Areas/Boys/Views/Home/index.cshtml
@@ -2,8 +2,8 @@
 @{
     ViewBag.Title = "Boys";
 }
-
-<h1>Boys</h1>
-<h2>16</h2>
+<h1 class="display-4">@ViewBag.Greeting</h1>
+<h2>Boys: </h2><h3>16</h3>
 <p>There are many boys in this class</p>
+@*This is the link to return to home, it goes to the default area*@
 <a asp-area="default" asp-controller="Home" asp-action="Index" class="btn-group-lg btn-link align-bottom">Go Back Home</a>
