--- a/AzureLab_GirlsandBoys/Areas/Teachers/Views/Home/Index.cshtml
+++ b/AzureLab_GirlsandBoys/Areas/Teachers/Views/Home/Index.cshtml
@@ -2,8 +2,8 @@
 @{
     ViewBag.Title = "Teachers";
 }
-
-<h1>Teachers</h1>
-<h2>2</h2>
+<h1 class="display-4">@ViewBag.Greeting</h1>
+<h1>Teachers: </h1><h2>2</h2>
 <p> The teachers manage this class</p>
+@*This is the link to return to home, it goes to the default area*@
 <a asp-area="default" asp-controller="Home" asp-action="Index" class="btn">Go Back Home</a>
