--- a/AzureLab_GirlsandBoys/Views/Home/Index.cshtml
+++ b/AzureLab_GirlsandBoys/Views/Home/Index.cshtml
@@ -5,6 +5,8 @@
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+
+    @*These are links on the home page that link to each different view by using tag helpers.*@
     <a asp-area="Boys" asp-controller="Home" asp-action="Index" class="btn">Boys</a>
     <a asp-area="Girls" asp-controller="Home" asp-action="Index" class="btn">Girls</a>
     <a asp-area="Teachers" asp-controller="Home" asp-action="Index" class="btn">Teachers</a>
