--- a/AzureLab_GirlsandBoys/Areas/Boys/Views/Home/index.cshtml
+++ b/AzureLab_GirlsandBoys/Areas/Boys/Views/Home/index.cshtml
@@ -1,9 +1,36 @@
-﻿
+﻿@model List<Tasks>
 @{
-    ViewBag.Title = "Boys";
+    ViewBag.Title = "Teachers";
 }
 <h1 class="display-4">@ViewBag.Greeting</h1>
-<h2>Boys: </h2><h3>16</h3>
-<p>There are many boys in this class</p>
+<h2>Number of Boys: 16</h2>
 @*This is the link to return to home, it goes to the default area*@
-<a asp-area="default" asp-controller="Home" asp-action="Index" class="btn-group-lg btn-link align-bottom">Go Back Home</a>
+
+<br />
+<br />
+<div>
+    <h3 class="text-center">Student Information </h3>
+    <br />
+    <table class="table"
+       <thead class="thead-dark">
+           <tr>
+               <th>Id</th>
+               <th>Description</th>
+               <th>Location</th>
+           </tr>
+       </thead>
+    <tbody>
+        @foreach (var task in Model)
+            {
+                <tr>
+                    <td>@task.Id |</td>
+                    <td>@task.Description </td>
+                    <td>| @task.Location</td>
+                </tr>
+            }
+    </tbody>
+</table>
+
+</div>
+
+<a asp-area="default" asp-controller="Home" asp-action="Index" class="btn">Go Back Home</a>
