--- a/AzureLab_GirlsandBoys/Areas/Girls/Views/Home/Index.cshtml
+++ b/AzureLab_GirlsandBoys/Areas/Girls/Views/Home/Index.cshtml
@@ -6,6 +6,7 @@
 <h2>Number of Girls: 2</h2>
 @*This is the link to return to home, it goes to the default area*@
 
+@*This code creates a table with a foreach that loops through the properties of the task list*@
 <br />
 <br />
 <div>
