Init Commit after finishing lab 10 and hostingthe app locally

--- a/AzureLab_GirlsandBoys/Views/Home/Index.cshtml
+++ b/AzureLab_GirlsandBoys/Views/Home/Index.cshtml
@@ -9,8 +9,7 @@
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 
     @*These are links on the home page that link to each different view by using tag helpers.*@
-    <a asp-area = "Boys" asp-controller = "Home" asp-action = "Index" class="btn">Boys</a>
-    <a asp-area="Girls" asp-controller="Home" asp-action="Index" class="btn">Girls</a>
-    <a asp-area = "Teachers" asp-controller = "Home" asp-action = "Index" class="btn">Teachers</a>
+    <a asp-area="Student" asp-controller="StudentTasks" asp-action="Index" class="btn">Students</a>
+    <a asp-area = "Teacher" asp-controller = "TeacherTasks" asp-action = "Index" class="btn">Teachers</a>
 
 </div>
